--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.0.0",
+    "sweetalert2": "^11.2.1",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
